Fix playlist alignment

--- a/app/styles/themes/wqxr/overrides/components/_track-info.scss
+++ b/app/styles/themes/wqxr/overrides/components/_track-info.scss
@@ -68,7 +68,7 @@
     width: 8px;
     height: 8px;
     border-radius: 4px;
-    margin-right: 16px;
+    margin-right: 28px;
     margin-top: 8px;
   }
 
